src/Header.css
.App-logo {
  height: calc(30px + 8vmin);
}

.App-header {
  padding: 5vh;
  padding-left: 50px;
  padding-right: 50px;
  display: flex;
  flex-direction: column;
  align-items: left;
  justify-content: center;
  font-size: calc(8px + 1vmin);
  opacity: 0;
  animation: fadeIn 1s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
  /* position: sticky;
  top: 0;
  z-index: 999; */
  background-color: #ffffffdd;
}

@media (max-width: 768px) {
  nav {
    width: 100%;
    margin-top: 20px;
    order: 2;
  }

  .App-header-div {
    flex-wrap: wrap;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.App-header-div a img:hover {
  transform: scale(1.05);
  transition: transform 0.3s ease;
}

.App-header-div a img {
  transition: transform 0.3s ease;
}

.App-header-div {
  display: flex;
  align-items: center;
}

.App-header-text {
  margin-left: 40px;
  text-align: left;
  width: 30vw;
}

@media (max-width: 450px) {
  .App-header-text {
    display: none;
  }
}

.App-header-text h1 {
  margin-top: 0px;
  margin-bottom: 5px;
  font-weight: normal;
}

.App-logo-name {
  margin-top: 0px;
  margin-bottom: 5px;
  height: calc(0px + 3vmin);
}

.App-header-text p {
  margin-top: 0px;
  margin-bottom: 0px;
  font-style: italic;
}

.App-header-links {
  margin-left: auto;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.App-header-links img {
  height: calc(5px + 5vmin);
  margin-left: 20px;
}

nav {
  width: 100%;
  display: flex;
  justify-content: space-between;
  padding: 0 5vw;
}

nav Button {
  border: hidden;
  background: transparent;
  height: 50px;
  cursor: pointer;
  font-weight: 300;
  font-size: larger;
  width: 100%;
  position: relative;
}

nav Button::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0;
  height: 2px;
  background-color: #aaa;
  transition: width 0.3s ease;
}

nav Button:hover::after,
nav Button.active::after {
  width: 100%;
}

nav Button.active::after {
  background-color: #222;
  width: 100%;
}

.listing {
  color: black;
  font-size: medium;
  font-weight: 300;
  margin-left: 15px;
  margin-bottom: 15px;
  display: flex;
  align-items: center;
}

.listing a {
  text-decoration: none;
  color: black;
}

.listing img {
  width: 25px;
  margin-right: 20px;
}

